# traitementDImage

EvalScans/: Thumbs.db
projet-traitement-images/: .gitignore  CMakeLists.txt  README.txt
projet-traitement-images/src/: main_test_opencv.cpp
